# akvatar

./: .dockerignore  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  README.md  app.py  cleanup.py  compose.dev.yml  compose.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  renovate.json  requirements.txt  run.py  run_app.py  run_cleanup.py
data/config/: config.example-full.yml  config.example-minimal.yml  config.example.yml
docs/: app-tls.md  authentik-api-token.md  authentik-oidc-setup.md  configuration.md  dev-update-dependencies.md  flask-session-key.md  how-it-works.md  ms-ad-service-account.md  nginx-reverse-proxy.md  screenshots.md  subfolder-deployment.md  tls.md  troubleshooting.md
src/: __init__.py  app_middleware.py  app_monitor.py  app_sentry.py  app_static.py  auth.py  authentik.py  authentik_api.py  cleanup.py  config.py  csrf.py  i18n.py  image_formats.py  image_import.py  image_validation.py  imaging.py  ldap_client.py  rate_limit.py  reset_avatar.py  routes.py  sec_csp.py  sec_csrf.py  upload.py  web_auth.py  web_image_import.py  web_reset_avatar.py  web_routes.py  web_sentry.py  web_serve_avatar.py
src/languages/: de_DE.yml  en_US.yml  es_ES.yml  fr_FR.yml
src/templates/: dashboard.html  logged_out.html  login.html
src/templates/partials/: dialog-image-import.html  dialog-settings.html  head.html  image-import-external.html  navbar.html  settings-btn.html  settings.html
static/: settings.js  style.css
static/css/: style.css
static/js/: common-utils.js  dashboard-image-import.js  dashboard-import-common.js  dashboard-import-gravatar.js  dashboard-import-url.js  dashboard-import-webcam.js  dashboard-main.js  dashboard-remove-avatar.js  dashboard-session-check.js  dashboard.js  dialog.js  image-import-external.js  image-import.js  logger.js  settings.js  tooltip.js
templates/: dashboard.html  logged_out.html  login.html
