# Akvatar is a self-hosted web app that lets users update their profile photo.
# After login via OIDC, users can upload or import an image (Gravatar, URL,
# or webcam), crop it client-side, and the backend processes it for multiple
# configurable sizes and formats. After this, it pushes it to Authentik
# via API and optionally to LDAP Server. A scheduled cleanup job handles
# orphaned files and retention.

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "akvatar"
version = "0.1"
description = "Self-hosted web application for users to update profile pictures in Authentik and optionally LDAP."
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.13"
dependencies = [
    "Flask==3.1.3",
    "Pillow==12.2.0",
    "authlib==1.6.9",
    "requests==2.33.1",
    "ldap3==2.9.1",
    "PyYAML==6.0.3",
    "gunicorn==25.3.0",
    "croniter==6.2.2",
    "cryptography==46.0.7",
    "sentry-sdk[flask]==2.57.0",
    "h2==4.3.0",
]

[tool.setuptools]
# Standalone app - no importable Python package to install; pip install only resolves deps.
packages = []
py-modules = []

[tool.setuptools.package-data]
"*" = []

# ---------------------------------------------------------------------------
# Ruff - linting and formatting
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modernise syntax for the target Python version)
    "B",   # flake8-bugbear (likely bugs and design issues)
    "C4",  # flake8-comprehensions (prefer comprehensions over map/filter)
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long - handled by the formatter
    "UP015", # Checks for redundant open mode arguments.
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
